# LACI-HQC128

./: CMakeConfig.cmake  CMakeLists.txt  CompilerOptions.cmake  README.md
doc/: Doxyfile.in
ext_lib/: CMakeLists.txt  cmake_install.cmake
ext_lib/pqclean/: aes.c  cmake_install.cmake  fips202.h  randombytes.c  sha2.c  sha2.h
ext_lib/pqm4/: aes-encrypt.S  aes-keyschedule.S  aes.c  crypto_hashblocks_sha512_inner32.s  nistseedexpander.c  nistseedexpander.h  randombytes.c  sha2.c
ext_lib/pqm4/xkcp/: KeccakP-1600-SnP.h  KeccakP-1600-inplace-32bi-armv7m-le-gcc.s  KeccakSponge.c  KeccakSponge.h  KeccakSponge.inc  SimpleFIPS202.c  SimpleFIPS202.h  align.h  config.h
lib/: CMakeLists.txt
lib/inc/: laci.h  laci_arch.h  laci_config.h  laci_error.h  laci_io.h  laci_memory.h  laci_misc.h  laci_random.h  laci_types.h
lib/inc/hqc/: laci_hqc_fft.h  laci_hqc_gf256.h  laci_hqc_gf2x.h  laci_hqc_io.h  laci_hqc_kem.h  laci_hqc_memory.h  laci_hqc_param.h  laci_hqc_pke.h  laci_hqc_reed_muller.h  laci_hqc_reed_solomon.h
lib/src/hqc/: laci_hqc_fft.c  laci_hqc_gf256.c  laci_hqc_gf2x.c  laci_hqc_gf2x_add_armv7.S  laci_hqc_gf2x_mul_armv7.S  laci_hqc_gf2x_rdc_armv7.S  laci_hqc_io.c  laci_hqc_kem.c  laci_hqc_memory.c  laci_hqc_pke.c  laci_hqc_reed_muller.c  laci_hqc_reed_muller_armv7.S  laci_hqc_reed_solomon.c
lib/src/misc/: laci_memory.c  laci_misc.c
lib/src/random/: laci_random.c
